fix(about-14): check and correct subtitle alignment for mobile center view

--- a/editor-components/about/about14/about14.module.scss
+++ b/editor-components/about/about14/about14.module.scss
@@ -204,9 +204,7 @@
                     align-items: center;
 
                     .subtitle {
-                        text-align: left !important;
-                        margin-left: 0 !important;
-                        width: auto;
+                        margin-left: auto !important;
                     }
 
                     .title,
